k8s/manifests/nginx/nginx-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  namespace: nginx
  labels:
    env: prod
    tier: app
