k8s/manifests/nginx/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
  labels:
    app: nginx
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        env: prod
    spec:
      nodeName: node3
      containers:
        - name: nginx
          image: nginx:1.14.2
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/var/www/html"
              name: mypd
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
      volumes:
        - name: mypd
          persistentVolumeClaim:
            claimName: myclaim

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
  labels:
    env: prod
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http-nginx
      protocol: TCP
      port: 80
      targetPort: 80
