k8s/manifests/nginx/allow-private-traffic-nginx.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "restrict-communication-nginx-app"
  namespace: nginx
spec:
  endpointSelector:
    matchLabels:
      app: nginx
      env: prod
  ingress:
    - fromEntities:
        - world
  egress:
    - toCIDRSet:
        - cidr: "192.168.0.0/16"
        - cidr: "10.0.0.0/8"
