k8s/manifests/nginx/policies_test.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-rule-test"
  namespace: nginx
spec:
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
    - fromEntities:
        - world
